# epubsum

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
epubsum/: __init__.py  epubsum.py
